fix(message): update time align

--- a/components/message/message.styl
+++ b/components/message/message.styl
@@ -113,10 +113,12 @@
 
 	&__timestamp
 		display inline
-		vertical-align middle
+		vertical-align bottom
+		height 21px
 		margin-left 8px
 		color var(--gray_300)
 		font-size 11px
+		line-height 21px
 		white-space nowrap
 		cursor default
 
